--- a/css/profil.css
+++ b/css/profil.css
@@ -1,10 +1,3 @@
-
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
 #profil-top {
     background: #000;
     width: 100%;
@@ -61,19 +54,19 @@ body {
     left: 310px;
     color: #FFF;
     font-size: 30px;
-    font-weight: 800;
+    font-weight: 700;
     text-shadow: 1px 1px 2px #404040;
 }
 
 #profil-bottom {
     background: #EEE;
-    height: 300px;
     width: 100%;
     position: relative;
     z-index: 3;
-    padding-top: 40px;
+    padding: 60px 20px 40px;
 }
 
+/* Responsive */
 @media screen and (max-width: 640px) {
     #profil-top {
         padding-top: 30px;
@@ -99,5 +92,8 @@ body {
 
     #profil-blur {
         top: 0;
+    }
+    #profil-bottom {
+        padding: 20px;
     }
 }
