--- a/lib/DataTables/AutoFill-2.2.2/css/autoFill.bootstrap.css
+++ b/lib/DataTables/AutoFill-2.2.2/css/autoFill.bootstrap.css
@@ -1,6 +1,7 @@
 div.dt-autofill-handle {
   position: absolute;
   height: 8px;
+  width: 8px;
   z-index: 102;
   box-sizing: border-box;
   border: 1px solid #337ab7;
